# bob_family_tree

./: .gitignore  CLAUDE.md  README  pyproject.toml
migrations/: 0001_create_schema.sql
src/app/: config.py  database.py  main.py  models.py  schemas.py  services.py
src/app/templates/: person_form.html
tests/: conftest.py  test_families_api.py  test_people_api.py  test_relationships_api.py  test_ui.py
