[project]
name = "bob-family-tree"
version = "0.1.0"
description = "Family tree backend built with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "python-dotenv",
  "alembic",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
